// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`No options - spec 1`] = `
"<div class=\\"pe-dialog\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
    </div>
    <form class=\\"pe-dialog-pane\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=\\"pe-dialog-pane__body\\"></div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: body - spec 1`] = `
"<div class=\\"pe-dialog\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
    </div>
    <form class=\\"pe-dialog-pane\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=\\"pe-dialog-pane__body\\">
          Hello
        </div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: class - spec 1`] = `
"<div class=\\"pe-dialog class-x\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
    </div>
    <form class=\\"pe-dialog-pane class-x\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=\\"pe-dialog-pane__body\\"></div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: className - spec 1`] = `
"<div class=\\"pe-dialog className-x\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
    </div>
    <form class=\\"pe-dialog-pane className-x\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=\\"pe-dialog-pane__body\\"></div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: element - spec 1`] = `
"<a class=\\"pe-dialog\\">
<div class=\\"pe-dialog__touch\\"></div>
<div class=\\"pe-dialog__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
  </div>
  <form class=\\"pe-dialog-pane\\">
    <div class=\\"pe-dialog-pane__content\\">
      <div class=\\"pe-dialog-pane__body\\"></div>
    </div>
  </form>
</div></a>
"
`;

exports[`Option: id - spec 1`] = `
"<div id=\\"id-x\\" class=\\"pe-dialog\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
    </div>
    <form class=\\"pe-dialog-pane\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=\\"pe-dialog-pane__body\\"></div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: modal with backdrop - spec 1`] = `
"<div class=\\"pe-dialog\\">
  <div class=\\"pe-dialog__backdrop\\"></div>
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
    </div>
    <form class=
    \\"pe-dialog-pane pe-dialog-pane--header pe-dialog-pane--footer\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=
        \\"pe-dialog-pane__header pe-dialog-pane__header--title\\">
          <div class=\\"pe-dialog-pane__title\\">
            Long dialog with a very long title that surely won't
            fit here
          </div>
        </div>
        <div class=\\"pe-dialog-pane__body\\">
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
        </div>
        <div class=
        \\"pe-dialog-pane__footer pe-dialog-pane__footer--buttons pe-button-row\\">
        <div class=\\"pe-dialog-pane__actions\\">
            <a class=\\"pe-button pe-text-button\\" tabindex=\\"0\\">
            <div class=\\"pe-button__content\\">
              <div class=\\"pe-ripple\\"></div>
              <div class=\\"pe-button__wash\\"></div>
              <div class=\\"pe-button__focus\\"></div>
              <div class=\\"pe-button__label\\">
                Cancel
              </div>
            </div></a><a class=\\"pe-button pe-text-button\\" tabindex=
            \\"0\\">
            <div class=\\"pe-button__content\\">
              <div class=\\"pe-ripple\\"></div>
              <div class=\\"pe-button__wash\\"></div>
              <div class=\\"pe-button__focus\\"></div>
              <div class=\\"pe-button__label\\">
                Save
              </div>
            </div></a>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: title and body (long text) - spec 1`] = `
"<div class=\\"pe-dialog\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-3\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-3\\"></div>
    </div>
    <form class=\\"pe-dialog-pane pe-dialog-pane--header\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=
        \\"pe-dialog-pane__header pe-dialog-pane__header--title\\">
          <div class=\\"pe-dialog-pane__title\\">
            Long dialog with a very long title that surely won't
            fit here
          </div>
        </div>
        <div class=\\"pe-dialog-pane__body\\">
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
        </div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: z (0) - spec 1`] = `
"<div class=\\"pe-dialog\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-0\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-0\\"></div>
    </div>
    <form class=\\"pe-dialog-pane\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=\\"pe-dialog-pane__body\\">
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
        </div>
      </div>
    </form>
  </div>
</div>
"
`;

exports[`Option: z (5) - spec 1`] = `
"<div class=\\"pe-dialog\\">
  <div class=\\"pe-dialog__touch\\"></div>
  <div class=\\"pe-dialog__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-5\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-5\\"></div>
    </div>
    <form class=\\"pe-dialog-pane\\">
      <div class=\\"pe-dialog-pane__content\\">
        <div class=\\"pe-dialog-pane__body\\">
          <p>
            Lorem ipsum dolor sit amet, consectetur adipisicing
            elit, sed do eiusmod tempor incididunt ut labore et
            dolore magna aliqua. Ut enim ad minim veniam, quis
            nostrud exercitation ullamco laboris nisi ut aliquip ex
            ea commodo consequat. Duis aute irure dolor in
            reprehenderit in voluptate velit esse cillum dolore eu
            fugiat nulla pariatur. Excepteur sint occaecat
            cupidatat non proident, sunt in culpa qui officia
            deserunt mollit anim id est laborum.
          </p>
        </div>
      </div>
    </form>
  </div>
</div>
"
`;
